ive got to stop comitting to master. styling on tasklist done. adding style to shift report card#

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -16,3 +16,9 @@
     0 0 16px $beige,
     inset 0px 0px 0px 2px $white ;
 }
+
+.btn-note-delete {
+  background-color: rgba(200, 200, 200, 0.1);
+  color: $white;
+  border-radius: 0 4px 4px 0;
+}
