--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -12,6 +12,7 @@
   padding: 1rem;
   background-color: #e1e1ff12;
   border-radius: 16px;
+  border: none;
   flex-grow: 1;
 
   .card-header{
@@ -34,4 +35,13 @@
 
 .tasklist {
   height: -webkit-fill-available;
+}
+
+
+.card-note {
+  width: -webkit-fill-available;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: none;
+  padding: 1rem;
+  border-radius: 4px 0 0 4px;
 }
